# ros_sw

./: .gitignore  CMakeLists.txt  README.md  diff_drive_plugin_description.xml  history.txt  imu_plugin_description.xml  otsu_params.yaml  package.xml  seg_params.yaml
.github/workflows/: ros-ci.yml
config/: dual_ekf_navsat_params.yaml  ekf.yaml  gps_wpf_demo.mvc  joystick.yaml  kpi_rover_controllers.yaml  my_controllers.yaml  nav2_no_map_params.yaml  navigation.yaml  slam_toolbox_mapping.yaml  view_bot.rviz
description/: camera.xacro  flexible_rod.xacro  imu.xacro  inertia.xacro  lidar.xacro  materials.xacro  navsat.xacro  robot.urdf.xacro  robot_core.xacro  ros2_control.xacro  stereo_camera.xacro  water_tank.xacro
description/meshes/: lidar.stl
doc/: install_ubuntu.md
executables/: example_diff_drive.cpp
include/kpi_rover/ecu_bridge/: cache.hpp  ecu_bridge.hpp  ecu_bridge_imu.hpp  ecu_bridge_motors.hpp  tcp_transport.hpp  transport.hpp  udp_transport.hpp
include/kpi_rover/hardware_interfaces/: kpi_rover_diff_drive_hw.hpp  kpi_rover_imu_hw.hpp
launch/: dual_ekf_navsat.launch.py  joystick.launch.py  launch_gzui.launch.py  launch_hw.launch.py  launch_irl.launch.py  launch_irl_base_station.launch.py  launch_irl_rpi.launch.py  launch_robot.launch.py  launch_sim.launch.py  launch_sim_ui.launch.py  launch_visualization.launch.py  mapviz.launch.py  navigation.launch.py  object_detection_test.py  rsp.launch.py  spawn_robot.launch.py
maps/: my_map_save.pgm  my_map_save.yaml  my_map_serial.data  warehouse.pgm  warehouse.yaml
params/: robot_bridge.yaml
scripts/: yuv422_compressed_to_rgb8_converter.py
scripts/object_detector/: object_detector.py
scripts/object_detector/yolo11n_ncnn_model/: metadata.yaml
src/SegMinNavigation/row_crop_follow/row_crop_follow/: seg_controller.py  seg_controller_node.py
src/apricotka-robot-car/: CMakeLists.txt  LICENSE  my_map_save.pgm  my_map_save.yaml  package.xml  setup.py
src/apricotka-robot-car/config/: ekf.yaml  my_controllers.yaml  navigation.yaml  slam_toolbox_mapping.yaml  view_bot.rviz
src/apricotka-robot-car/description/: lidar.xacro  robot.urdf.xacro  robot_core.xacro  water_tank.xacro
src/apricotka-robot-car/executables/: move.cpp  move_and_turn.cpp  rotate.cpp  twist_to_twist_stamped.cpp
src/apricotka-robot-car/launch/: amcl_localization.launch.py  launch_robot.launch.py  launch_sim.launch.py  teleop.launch.py
src/apricotka-robot-car/params/: robot_bridge.yaml
src/apricotka-robot-car/worlds/: empty.world  gen_world.py
src/apricotka-robot-car/worlds/models/apricot_tree/: model.config
src/apricotka-robot-car/worlds/models/ground_plane/: model.sdf
src/ecu_bridge/: ecu_bridge.cpp  ecu_bridge_imu.cpp  ecu_bridge_motors.cpp  tcp_transport.cpp  udp_transport.cpp
src/ecu_emulator/: ecu_emulator.py  ecu_emulator_imu  ecu_emulator_imu.cpp
src/hardware_interfaces/: kpi_rover_diff_drive_hw.cpp  kpi_rover_imu_hw.cpp
test/: test_ecu_bridge.cpp  test_ecu_bridge_imu.cpp  test_ecu_bridge_motors.cpp
worlds/: empty.world  forest.world  gen_world.py  industrial-warehouse.sdf
