<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>apricotka-robot-car</name>
  <version>0.0.0</version>
  <description>Apricotka Robot Car</description>
  <maintainer email="fastroof@todo.todo">fastroof</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <depend>ros2_control</depend>
  <depend>joy</depend>
  <depend>teleop_twist_joy</depend>
  <depend>xacro</depend>
  <depend>ros_gz_sim</depend>
  <depend>ros_gz_bridge</depend>
  <depend>ros_gz_image</depend>
  <depend>gz_ros2_control</depend>
  <depend>robot_state_publisher</depend>
  <depend>joint_state_broadcaster</depend>
  <depend>diff_drive_controller</depend>
    
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
