<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>kpi_rover</name>
  <version>0.0.0</version>

  <description>KPI Rover project</description>

  <url type="repository">https://github.com/KPI-Rover/ros_ws</url>
  <url type="website">https://kpi-rover.github.io/</url>

  <maintainer email="aksonov.sergei@gmail.com">Aksonov Sergii</maintainer>
  <maintainer email="another_maintainer@example.com">Another Maintainer</maintainer>
  <maintainer email="another_maintainer@example.com">Another Maintainer</maintainer>
  
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_cmake_python</buildtool_depend>
  
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <depend>rclcpp</depend>
  <depend>pluginlib</depend>
  <depend>hardware_interface</depend>
  <depend>controller_manager</depend>
  <depend>ros2_control</depend>
  <depend>joy</depend>
  <depend>teleop_twist_joy</depend>
  <depend>xacro</depend>
  <depend>ros_gz_sim</depend>
  <depend>ros_gz_bridge</depend>
  <depend>ros_gz_image</depend>
  <depend>gz_ros2_control</depend>
  <depend>robot_state_publisher</depend>
  <depend>joint_state_broadcaster</depend>
  <depend>diff_drive_controller</depend>
  <depend>imu_sensor_broadcaster</depend>
  <depend>slam_toolbox</depend>
  <depend>robot_localization</depend>
  <depend>navigation2</depend>
  <depend>nav2_bringup</depend>
  <depend>twist_stamper</depend>
  <depend>v4l2_camera</depend>
  <depend>image_transport_plugins</depend>
  
  <depend>sensor_msgs</depend>
  <depend>cv_bridge</depend>
  <depend>builtin_interfaces</depend>
  <depend>image_transport</depend>
  <depend>std_msgs</depend>
  <depend>compressed_image_transport</depend>
    
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <exec_depend>libfastcdr-dev</exec_depend>
  <exec_depend>opencv-python</exec_depend>
  <exec_depend>numpy</exec_depend>
  <exec_depend>ncnn</exec_depend>

  <depend>rclpy</depend>
  
  <export>
    <build_type>ament_cmake</build_type>
    
  </export>
</package>
